--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,27 @@ White:
     box-shadow: 3px 8px 6px 8px #888888;
  }
 
+ .Button4 {
+   background-color: #8ec342;
+   border: none;
+   padding: 9px;
+   border-radius: 8px;
+   color: white;
+   font-size: 16px;
+   margin: 18px;
+   transition-duration: 0.5s;
+
+  }
+
+.Button4:hover {
+  background-color: white;
+  border: 2px solid #8ec342;
+  color: #239507;
+  box-shadow: 3px 8px 6px 8px #888888;
+
+   
+}
+ 
  #dot {
         height: 25px;
         width: 25px;
