fixing extra buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -227,3 +227,10 @@ White:
  .radioButton {
      display: block;
  }
+
+ /* table styling
+   "container / body / card "
+   dropdown input, checkbox input
+    background
+    
+ */
