--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -66,8 +66,8 @@
                 <td>{{patient.dob}}</td>
                 <!-- <td>{{patient.dob}}</td> -->
                 <td>
-                    <ul>
-                        <li  *ngFor = "let allergy of patient.allergies">
+                    <ul >
+                        <li *ngFor="let allergy of patient.patientAllergies">
                             {{allergy.allergy}}
                         </li>
                     </ul>
@@ -76,7 +76,7 @@
                 <td>{{patient.weight}}</td>
                 <td>
                     <ul>
-                        <li  *ngFor = "let vax of patient.vaccinations">
+                        <li  *ngFor="let vax of patient.patientVaccinations">
                             {{vax.vaccination}}
                         </li>
                     </ul>
