--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,32 +1,36 @@
-<div id="RegistrationDiv" class="col-sm-4">
+<div class='form-check container'>
+    <div class=background>
+        <div id="RegistrationDiv" class="covidCard">
 
-    <div class="CenterContainerContent">
-        <h1 class="RegistrationTitle">
-            Sign in
-        </h1>
-    </div>
-   
-    <div>
-        <div>
-            <label class="loginText">Email:</label>
-            <input type="text" #email class="loginInput">
+            <div class="CenterContainerContent">
+                <h1 class="RegistrationTitle">
+                    Sign in
+                </h1>
+            </div>
+           
+            <div>
+                <div>
+                    <label class="loginText">Email:</label>
+                    <input type="text" #email class="loginInput">
+                </div>
+                <div>
+                    <label class="loginText">Password:</label>
+                    <input type="password" #password class="loginInput">
+                </div>
+                <div><button (click)="onSignin(email.value, password.value)" class="Button4">Sign in</button></div>
+            </div>
+            <div>
+               
+                <div><button (click)="register()" class="RegisterButton">Register</button> </div>
+                <div><button (click)="forgetPassword()" class="RegisterButton">Forget Password</button> </div>
+                <hr>
+                
+                <!--
+                <div><button (click)="getUser()" class="RegisterButton">Get user info</button> </div>
+                <div><button (click)="logout()" class="RegisterButton">Logout</button></div>
+                <div><button (click)="refreshToken()" class="RegisterButton"> Refresh Token</button> </div> -->
+            </div>
         </div>
-        <div>
-            <label class="loginText">Password:</label>
-            <input type="password" #password class="loginInput">
-        </div>
-        <div><button (click)="onSignin(email.value, password.value)" class="RegisterButton">Sign in</button></div>
-    </div>
-    <div>
-       
-        <div><button (click)="register()" class="RegisterButton">Register</button> </div>
-        <div><button (click)="forgetPassword()" class="RegisterButton">Forget Password</button> </div>
-        <hr>
-        
-        <!--
-        <div><button (click)="getUser()" class="RegisterButton">Get user info</button> </div>
-        <div><button (click)="logout()" class="RegisterButton">Logout</button></div>
-        <div><button (click)="refreshToken()" class="RegisterButton"> Refresh Token</button> </div> -->
     </div>
 </div>
 <!-- <a routerLink="signup" routerLinkActive="active"><button>Create Account</button></a> -->
