--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -1,15 +1,17 @@
-<app-navbar></app-navbar>
+
 <div class="background">
-    <div class="container">
-        <h1>Doctor</h1>
-    </div>
 
-    <app-button class="btn btn-top-left" (btnClick) = "goBack()" text = "Back"></app-button>
+  <br>
+  <div class = "row">
+      <div class="col-sm-5 logo">
+  </div>
+<div class= title><h1>Doctor</h1></div>
+    <button class="btn btn-top-left" (btnClick) = "goBack()" text = "Back"></button>
 
-    <div class="top-right">
-    <app-button class="btn" (btnClick) = "routeToAdd()" text = "Add Patient Options"></app-button>
-    <app-button class="btn" (btnClick) = "viewUserInfo()" text = "View User Info"></app-button>
-    <app-button class="btn" (btnClick) = "logout()" text = "Logout"></app-button>
+    <div class="row">
+        <div class="col-sm-7"></div>
+    <button class="Button3 col-sm-2" type="button" (click) = "routeToAdd()" >Add patient options</button>
+    <button class="Button3 col-sm-2" type="button" (click) = "viewUserInfo()" >View user info</button>
     </div>
 
 
@@ -61,13 +63,16 @@
     </table>
 
     </div> -->
-
+<div class="row"></div>
     <div class="search-area">
     <div class="form-group">
+        
         <!-- <label for="patient-search">Search for Patients</label> -->
-        <input type="text" class="form-control" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
+        First name:
+        <input type="text" class="form-control Input" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
+        Last name:
         <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>
-    </div>
+   
 
     <label for= "dob">Date of Birth:</label>
     <input
@@ -76,14 +81,15 @@
         name= "dob"
         id= "dob"
         #dobField
-    >
+        placeholder="Date of birth (mm/dd/yyyy)"
+    >  </div>
 
-    <div class="button-group">
-         <app-button id="searchId" class="btn btn-search" (btnClick)="getAllPatients()" text="Display All Patients"></app-button>
-        <app-button id="searchName"  class="btn btn-search" (btnClick)="searchPatByFName(firstName.value)" text="Search for Patients by First Name"></app-button>
-        <app-button id="searchFullName"  class="btn btn-search" (btnClick)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name"></app-button>
-        <app-button id="searchDOB" class="btn btn-search" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth"></app-button>
-    </div>
+    
+         <button id="searchId" class="Button2" (btnClick)="getAllPatients()" text="Display All Patients">Display all patients</button>
+        <button id="searchName"  class="Button2" (btnClick)="searchPatByFName(firstName.value)" text="Search for Patients by First Name">Search for patients by first name</button>
+        <button id="searchFullName"  class="Button2" (btnClick)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name">Search for patients by first name and last name</button>
+        <button id="searchDOB" class="Button2" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth">Search for patients by first name, last name and date of birth</button>
+   
 </div>
 
 <div class="DoctorSearchArea">
@@ -95,7 +101,7 @@
     </div>
 
 
-    <app-button id="searchDoctor" class="btn btn-search" (btnClick)="searchByDoctor(doctorFirstName.value, doctorLastName.value)" text="Search By Doctor"></app-button>
+    <button id="searchDoctor" class="Button2" (btnClick)="searchByDoctor(doctorFirstName.value, doctorLastName.value)" text="Search By Doctor">Search by doctor</button>
 
 </div>
 
@@ -120,7 +126,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let patient of patientsArray">
-                    <td><app-button (btnClick)="diagnosePatient(patient)"></app-button></td>
+                    <td><button (btnClick)="diagnosePatient(patient)"></button></td>
                     <td *ngIf="searchingDoctor"> {{doctorName}}</td>
                     <td>{{patient.firstName}}</td>
                     <td>{{patient.lastName}}</td>
