--- a/src/app/components/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile-edit/profile-edit.component.html
@@ -1,7 +1,8 @@
 <app-navbar></app-navbar>
-<div class="container">
+<div class="background">
     <div>
-        <h1>Edit Information</h1>
+      <br>
+        <div class="title"><h1>Edit Information</h1></div> 
             <div class="form-group">
                 <label for="firstName">First name</label>
                 <input type="text" class="form-control" #firstname id="firstName" maxlength="20"
@@ -45,7 +46,7 @@
 
     </div>
 
-    <app-button text="Submit"
-        (click)="submit(firstname.value, lastname.value)"></app-button>
+    <button text="Submit" class="Button3"
+        (click)="submit(firstname.value, lastname.value)">Submit</button>
 
 </div>
