--- a/src/app/components/patient-check-in/patient-check-in.component.html
+++ b/src/app/components/patient-check-in/patient-check-in.component.html
@@ -1,4 +1,4 @@
-<div class= "container" >
+<div class= "background" >
    <div class= "patientCheckIn">
 
     <p><span class = "asterix">*</span> marks required fields.</p>
@@ -103,11 +103,11 @@
             <div id = "vaccinationanchor">Vaccinations:</div>
 
         </div>
-        <button type= "submit" class= "btn btn-success submit-button">Add Patient</button>
+        <button type= "submit" class= "Button3">Add Patient</button>
     </form>
 <br>
 
-    <a routerLink= "/nurse" ><app-button class="btn" text="Navigate Home"></app-button></a>
+    <a routerLink= "/nurse" ><app-button class="btn" text="Navigate Home will be deleted after navbar is made"></app-button></a>
     <!-- </div>
     <ng-template #NewPatient>
       <p>This is where the new patient registration goes</p>
