--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -11,7 +11,8 @@
     <div class="row">
         <div class="col-sm-7"></div>
     <button class="Button3 col-sm-2" type="button" (click) = "routeToAdd()" >Add patient options</button>
-    <button class="Button3 col-sm-2" type="button" (click) = "viewUserInfo()" >View user info</button>
+    <button class="Button3 col-sm-2" type="button" (click) = "viewUserInfo()" >View user info will go away after navbar is added</button>
+    
     </div>
 
 
@@ -66,6 +67,9 @@
 <div class="row"></div>
     <div class="search-area">
     <div class="form-group">
+        <div class="title">
+            <h3>Patient search</h3>
+        </div>
         
         <!-- <label for="patient-search">Search for Patients</label> -->
         First name:
@@ -82,30 +86,35 @@
         id= "dob"
         #dobField
         placeholder="Date of birth (mm/dd/yyyy)"
-    >  </div>
+    > 
 
     
          <button id="searchId" class="Button2" (btnClick)="getAllPatients()" text="Display All Patients">Display all patients</button>
         <button id="searchName"  class="Button2" (btnClick)="searchPatByFName(firstName.value)" text="Search for Patients by First Name">Search for patients by first name</button>
         <button id="searchFullName"  class="Button2" (btnClick)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name">Search for patients by first name and last name</button>
         <button id="searchDOB" class="Button2" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth">Search for patients by first name, last name and date of birth</button>
-   
+    </div>
 </div>
 
 <div class="DoctorSearchArea">
 
     <div class="form-group">
+        <div class="title">
+            <h3>Patient search (by Doctor)</h3>
+        </div>
+        
         <!-- <label for="patient-search">Search for Patients</label> -->
         <input type="text" class="form-control" id="doctorFirstName" #doctorFirstName name="doctorFirstName" placeholder="Enter First Name" required>
-        <input type="text" class="form-control" id="doctorLastName" #doctorLastName  name="doctorLastName" placeholder="Enter Last Name" required>
+        <input type="text" class="form-control" id="doctorLastName" #doctorLastName  name="doctorLastName" placeholder="Enter Last Name" required><button id="searchDoctor" class="Button2" (btnClick)="searchByDoctor(doctorFirstName.value, doctorLastName.value)" text="Search By Doctor">Search by doctor</button>
     </div>
 
 
-    <button id="searchDoctor" class="Button2" (btnClick)="searchByDoctor(doctorFirstName.value, doctorLastName.value)" text="Search By Doctor">Search by doctor</button>
+    
 
 </div>
-
+<div class="title"><h3>Patients</h3></div>
     <div class="table">
+        
         <table>
             <thead>
                 <tr>
@@ -159,3 +168,4 @@
     </div>
 
 </div>
+<button class="Button3 col-sm-2" type="button" (click) = "logout()" >Logout will go away once navbar is made</button>
