--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,4 @@
-#RegistrationDiv {
+/*#RegistrationDiv {
   border-style: double;
 
   padding-left: 3%;
@@ -6,12 +6,12 @@
   padding-top: 20px;
   padding-bottom: 20px;
 
-  background-color: rgba(200, 220, 180, 0.1);
+  background-color: rgba(200, 220, 180, 0.1);*/
   /* 
     align-self : center;
     justify-self : center; */
 
-  width: 40%;
+ /* width: 40%;
 
   margin: auto;
 }
@@ -30,12 +30,12 @@ div {
   margin-left: 10%;
   margin-right: 10%;
 
-  color: rgb(0, 38, 74);
+  color: rgb(0, 38, 74);*/
 
   /* 
     align-self : center;
     justify-self : center; */
-
+/*
   text-align: center;
 }
 
@@ -150,4 +150,47 @@ div {
   font-weight: 700;
 
   text-align: center;
+}
+*/
+.container-full{
+  background-image: url('/assets/img/graybg.png');
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+.loginbox{
+  height: 590px;
+  background: white url('/assets/img/loginboxbg.jpg');
+  background-position: right;
+  background-repeat: no-repeat;
+  width: 1024px;
+  border-radius: 25px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.btn{
+  width: 50%;
+}
+.links a{
+  cursor: pointer;
+  color:#777777 !important;
+}
+.links a:hover{
+  color: #3A7F3E !important;
+}
+ul {
+  list-style: none; /* Remove default bullets */
+}
+
+ul li::before {
+  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color:#3A7F3E; /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
+  font-size: large;
+}
+.form-control:focus {
+  border-color: #3A7F3E;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(57, 126, 61, 0.6);
 }
