--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
                                     <path d="M9.5 6.5a1.5 1.5 0 0 1-1 1.415l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99a1.5 1.5 0 1 1 2-1.415z"/>
                                   </svg>
                               </span>
-                            <input type="text" class="form-control" #password aria-label="Password" placeholder="Password">
+                            <input type="password" class="form-control" #password aria-label="Password" placeholder="Password">
                           </div>
                           <div class="col-12 mb-5">
                             <button type="submit" (click)="onSignin(email.value, password.value)" class="btn btn-outline-success">Login</button>
