All initial styling done

--- a/src/app/components/add-allergies-vaccines/add-allergies-vaccines.component.html
+++ b/src/app/components/add-allergies-vaccines/add-allergies-vaccines.component.html
@@ -1,4 +1,4 @@
-<div class= "container" >
+<div class= "background" >
     <app-button class="btn btn-top-left" (btnClick)="goBack()" text="Back"></app-button>
 
     <div class= "addAllergiesVaccines">
@@ -23,7 +23,7 @@
              />
              <br>
             </div>
-            <button type= "submit" class= "btn btn-success submit-button">Add</button>
+            <button type= "submit" class= "Button3">Add</button>
         </form>
         <br>
         <form
@@ -47,7 +47,7 @@
              <br>
  
          </div>
-         <button type= "submit" class= "btn btn-success submit-button">Add</button>
+         <button type= "submit" class= "Button3">Add</button>
      </form>
 
      <form
@@ -60,7 +60,7 @@
          <u><h5>Delete Allergy:</h5></u>
         <div id = "allergyanchor" style = "display:block; align-items : center; justify-content : center;"></div>
             <br>
-         <button type= "submit" class= "btn btn-success submit-button">Delete</button>
+         <button type= "submit" class= "Button3">Delete</button>
      </form>
 
      <form
@@ -73,7 +73,7 @@
          <u><h5>Delete Vaccinations:</h5></u>
         <div id = "vaccinationanchor"></div>
         <br>
-         <button type= "submit" class= "btn btn-success submit-button">Delete</button>
+         <button type= "submit" class= "Button3">Delete</button>
      </form>
  <br>
 
