--- a/src/app/components/diagnosis/diagnosis.component.html
+++ b/src/app/components/diagnosis/diagnosis.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <br />
-<div class="container">
+<div class="background">
   <div>
-    <table>
+    <table class="diagnosisTable">
       <thead>
         <tr>
           <th class="col-sm-6 patient-info">
