--- a/src/app/lockout/lockout.component.html
+++ b/src/app/lockout/lockout.component.html
@@ -3,14 +3,14 @@
       <a class="nav-link text-dark" [routerLink]="['/lockout']">Home page</a>
     </li>
     <li class="nav-item">
-        <button class="btn shadow-none" (click)="logout()" type="button">Logout</button>
+        
       </li>
-      <li class="nav-item">
-        <img src="/assets/img/WellNetLogoClear.png">
-      </li>
+    
    
   </ul>
+  <div class="background">
+  <div class="timer">
 <h2>Hi! Due to your answers to the Covid-19 Screening Form you have been locked out of your account. </h2>
 <h2>Please take care and focus on rest and recovery.</h2>
 <h1>You can start work in:</h1>
-<p id="timer" style="font-size:64px;font-family:arial" class="w3-center"></p>
+<p id="timer" style="font-size:64px;font-family:arial" class="w3-center"></p></div><button class="Button3" (click)="logout()" type="button">Logout</button></div>
