--- a/src/styles.css
+++ b/src/styles.css
@@ -331,5 +331,18 @@ td { text-align: left;}
    margin-right:500px;
 }
 
+.timer {
+   text-align: center;
+   padding-top: 50px;
+}
+
+.diagnosisTable {
+   margin-top:80px;
+   margin-left:auto;
+   margin-right:auto;
+   width:40%;
+}
+
+
 
 
