--- a/src/styles.css
+++ b/src/styles.css
@@ -68,9 +68,18 @@ White:
      transition-duration: 0.5s;
      width:100%;
      max-width: 200px;
-
+    
     }
- 
+    .btnRow{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+  
+  }
+  .btnRow>.Button2{
+   height: 90px;
+  }
  .Button2:hover {
     background-color: white;
     border: 2px solid #239507;
