--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -1,33 +1,40 @@
-<div class='form-check container'>
-    <div class=background>
-        <div id="RegistrationDiv" class="col-sm-4">
-
-            <div class="CenterContainerContent">
-                <h3 class="RegistrationTitle">
-                    Request a New Password
-                </h3>
-            </div>
-           
-            <div>
-                <div>
-                    <label class="loginText">Email:</label>
-                    <input type="text" #email class="loginInput">
+<div class="container-full d-flex align-items-center">
+    <div class="container">
+        <div class="row">
+            <div class="d-flex justify-content-center col-md-12">
+                <div class="loginbox">
+                    <div class="row">
+                        <div class="col-md-5 p-5">
+                            <div class="mb-5">
+                                <img src="/assets/img/WellNetLogo.jpg" alt="">
+                            </div>
+                            <h4 class="mb-4">
+                                Request a New Password
+                            </h4>
+                            <label>Please type your email address:</label>
+                            <div class="input-group mb-4">
+                                <span class="input-group-text" >
+                                  @
+                                </span>
+                                <input type="text" class="form-control"
+                                #email       
+                                 
+                                  autocomplete = "off" placeholder="Email address">
+                                
+                              </div>
+                            <div class="mb-4"><button (click)="sendEmail(email.value)" class="btn btn-outline-success">Submit</button></div>
+                            <div class="links">
+                                <ul>
+                                    <li>
+                                        <a (click)="loginPage()">Back to Login</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        
+                    </div>
                 </div>
-                <div><button (click)="sendEmail(email.value)" class="RegisterButton">Submit</button></div>
-                <div><button (click)="loginPage()" class="RegisterButton">Back to Login</button></div>
             </div>
-            <div>
-               
-                <!-- <div><button (click)="register()" class="RegisterButton">Register</button> </div> -->
-                <!-- <div><button (click)="forgetPassword()" class="RegisterButton">Forget Password</button> </div> -->
-                <hr>
-                
-                <!--
-                <div><button (click)="getUser()" class="RegisterButton">Get user info</button> </div>
-                <div><button (click)="logout()" class="RegisterButton">Logout</button></div>
-                <div><button (click)="refreshToken()" class="RegisterButton"> Refresh Token</button> </div> -->
-            </div>
-        </div>    
+        </div>
     </div>
-</div>
-<!-- <a routerLink="signup" routerLinkActive="active"><button>Create Account</button></a> -->
+    </div>
