--- a/src/styles.css
+++ b/src/styles.css
@@ -273,9 +273,9 @@ White:
 
 }
 
-label {
+/* label {
    padding-left: 3px;
-}
+} */
 
 .background2 {
    position:absolute;
@@ -351,7 +351,49 @@ td { text-align: left;}
    margin-right:auto;
    width:40%;
 }
+/*Template theme*/
+.container-full{
+   background-image: url('/assets/img/graybg.png');
+   background-size: cover;
+   width: 100%;
+   height: 100%;
+ }
+ .loginbox{
+   height: 590px;
+   background: white url('/assets/img/loginboxbg.jpg');
+   background-position: right;
+   background-repeat: no-repeat;
+   width: 1024px;
+   border-radius: 25px;
+   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+ }
 
+ .links ul {
+   list-style: none; /* Remove default bullets */
+ }
 
-
-
+ .links ul li::before {
+   content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+   color:#3A7F3E; /* Change the color */
+   font-weight: bold; /* If you want it to be bold */
+   display: inline-block; /* Needed to add space between the bullet and the text */
+   width: 1em; /* Also needed for space (tweak if needed) */
+   margin-left: -1em; /* Also needed for space (tweak if needed) */
+   font-size: large;
+ }
+ .form-control:focus, .form-check-input:focus {
+   border-color: #3A7F3E !important;
+   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(57, 126, 61, 0.6) !important;
+ }
+ .form-check-input:checked {
+   background-color: #3A7F3E !important;
+   border-color: #3A7F3E !important;
+ }
+ a{
+   text-decoration: none;
+   color:#777777 !important;
+   cursor: pointer;
+ }
+ a:hover{
+   color: #3A7F3E !important;
+ }
