--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="d-flex justify-content-center col-md-12">
-            <div class="loginbox">
+            <div class="mainbox mainbox-bg">
                 <div class="row">
                     <div class="col-md-5 p-5">
                         <div class="mb-5">
@@ -44,6 +44,7 @@
                     
                 </div>
             </div>
+            
         </div>
     </div>
 </div>
