--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -2,7 +2,7 @@
   <div class="container">
       <div class="row">
           <div class="d-flex justify-content-center col-md-12">
-            <div class="registrationbox">
+            <div class="mainbox mainbox-bg2">
               <div class="row">
                 <div class="col-md-12 mt-4 ps-5">
                   <div>
