--- a/src/styles.css
+++ b/src/styles.css
@@ -358,16 +358,28 @@ td { text-align: left;}
    width: 100%;
    height: 100%;
  }
- .loginbox{
-   height: 590px;
-   background: white url('/assets/img/loginboxbg.jpg');
-   background-position: right;
-   background-repeat: no-repeat;
+ .h100{
+    height: 100%;
+ }
+ .mainbox{
+   margin-left: auto;
+   margin-right: auto;
+   min-height: 590px;
+   background-color: white;
    width: 1024px;
    border-radius: 25px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
  }
-
+ .mainbox-bg{
+   background: white url('/assets/img/loginboxbg.jpg');
+   background-position: right;
+   background-repeat: no-repeat;
+ }
+ .mainbox-bg2{
+   background: white url('/assets/img/regbg.jpg');
+   background-size: cover;
+   background-repeat: no-repeat;
+ }
  .links ul {
    list-style: none; /* Remove default bullets */
  }
