editing patients is now out of scope

--- a/src/app/components/add-allergies-vaccines/add-allergies-vaccines.component.html
+++ b/src/app/components/add-allergies-vaccines/add-allergies-vaccines.component.html
@@ -4,7 +4,7 @@
 
     <div class= "addAllergiesVaccines" id = "initialPage">
 
-        <form
+        <!-- <form
          
          #formDemo= "ngForm"
          class= "form-check-in"
@@ -53,7 +53,7 @@
                </div>
                <br>
             <button type= "submit" class= "btn btn-success submit-button">Find Patient</button>
-        </form>
+        </form> -->
         <br>
         
          <form
@@ -62,7 +62,7 @@
          class= "form-check-in"
          (ngSubmit)= "submitAllergy(newAllergy)">  
  
-         <div class= "form-group">
+         <div >
              <!-- <label for= "newAllergy">Add Allergy:</label> -->
              <u><h5>Add Allergy:</h5></u>
              <input
@@ -85,7 +85,7 @@
          class= "form-check-in"
          (ngSubmit)= "submitVaccine(newVaccine)">  
  
-         <div class= "form-group">
+         <div>
              <!-- <label for= "newVaccine">Add Vaccine:</label> -->
              <u><h5>Add Vaccination:</h5></u>
                  <input
@@ -130,7 +130,7 @@
      </form>
  <br>
 
- </div>
+ <!-- </div>
 
  
     <div class= "patientCheckIn" id="editPage" hidden>
@@ -236,5 +236,7 @@
      </form>
  <br>
 
+
+</div> -->
 
 </div>
