--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -10,7 +10,7 @@
       <div class="row">
           <div class="col-sm-5"></div>
       <button class="Button3 col-sm-2" type="button" (click) = "addPatient()" >Add patient</button>
-      <button class="Button3 col-sm-2" type="button" (click) = "routeToAdd()" >Add patient options</button>
+      <button class="Button3 col-sm-2" type="button" (click) = "routeToAdd()" >Edit patient options</button>
       <button class="Button3 col-sm-2" type="button" (click) = "getInfo()" >View user info will go away after navbar is created</button>
       
       </div>
