--- a/src/app/components/patient-check-in/patient-check-in.component.html
+++ b/src/app/components/patient-check-in/patient-check-in.component.html
@@ -98,9 +98,11 @@
                     <option value="NB">Other</option>
                 </select>
             <br>
-            <div id = "allergyanchor">Allergies:</div>
+            <u><h5> Allergies: </h5></u>
+            <div id = "allergyanchor"></div>
             <br>
-            <div id = "vaccinationanchor">Vaccinations:</div>
+            <u><h5> Vaccinations: </h5></u>
+            <div id = "vaccinationanchor"></div>
 
         </div>
         <button type= "submit" class= "Button3">Add Patient</button>
