--- a/src/app/components/nurse/nurse.component.css
+++ b/src/app/components/nurse/nurse.component.css
@@ -3,10 +3,10 @@
     position: relative;
     color: rgb(0, 38, 74);
 } */
-
+/*
 table td{
     text-align: center;
-}
+}*/
 
 /* .background {
     background:  rgba(200, 220, 180, 0.1);
@@ -69,7 +69,7 @@ input {
     margin-top: 3em;
     margin-bottom: 3em;
 } */
-
+/*
 .table{
     display: flex;
     justify-content: center;
@@ -85,7 +85,7 @@ table th {
 table th:last-child {
     border-right: none;
 }
-
-
-
-
+*/
+.mainbox{
+    width: 80%;
+}
