--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -1,190 +1,125 @@
-<div class="background">
-
-    <br>
-    <div class = "row">
-        <div class="col-sm-5 logo">
+<div class="container-full">
+    <div class="container-fluid h100">
+        <div class="row h100">
+            <div class="col-md-2 p-3 bg-light">
+                <app-side-bar class="d-flex flex-column flex-shrink-0 h100"></app-side-bar>
+            </div>
+            <div class="col-md-10 align-self-center">
+                <div class="mainbox">
+                    <div class="row">
+                        <div class="col-md-12 p-5">
+                            <div class="mb-5">
+                                <img src="/assets/img/WellNetLogo.jpg" alt="">
+                            </div>
+                            <h4 class="mb-4">Patient search</h4>
+                                    
+        <div class="mb-4">
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item">
+                    First name:
+                    <input type="text" class="form-control Input" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
+                </li>
+                <li class="list-group-item">
+                    Last name:
+                    <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>
+                </li>
+                <li class="list-group-item">
+                    <label for= "dob">Date of Birth:</label>
+                    <input size=12
+                        type= "date"
+                        class= "form-control "
+                        name= "dob"
+                        id= "dob"
+                        #dobField
+                        placeholder="Date of birth (mm/dd/yyyy)"
+                    > 
+                </li>
+                <li class="list-group-item">
+                    Search by
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>Display all patients</option>
+                        <option value="1">First name</option>
+                        <option value="2">First name and last name</option>
+                        <option value="3">First name, last name and date of birth</option>
+                      </select>
+                </li>
+                <li class="list-group-item">
+                    <br>
+                    <button id="searchId" class="btn btn-outline-success" (btnClick)="getAllPatients()" text="Display All Patients">Search</button>
+                </li>
+            </ul>
+            
+            
+       
+    
+        </div>  
+    
+    <div class="mb-4" hidden>             
+            <button id="searchName"  class="btn btn-outline-success" (btnClick)="searchPatByFName(firstName.value)" text="Search for Patients by First Name">Search for patients by first name</button>
+            <button id="searchFullName"  class="btn btn-outline-success" (btnClick)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name">Search for patients by first name and last name</button>
+            <button id="searchDOB" class="btn btn-outline-success" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth">Search for patients by first name, last name and date of birth</button>
     </div>
-  <div class= title><h1>Nurse</h1></div>
-      <button class="btn btn-top-left" (btnClick) = "goBack()" text = "Back"></button>
+    
   
-      <div class="row">
-          <div class="col-sm-5"></div>
-      <button class="Button3 col-sm-2" type="button" (click) = "addPatient()" >Add patient</button>
-      <button class="Button3 col-sm-2" type="button" (click) = "routeToAdd()" >Add patient options</button>
-      <button class="Button3 col-sm-2" type="button" (click) = "getInfo()" >View user info will go away after navbar is created</button>
-      
-      </div>
-  
-  
-      <!-- <div id = "TempDiv">
-          <h1> All Patients Available (Displaying Available Fields) </h1>
-  
-          <table class="table table-striped table-light table-hover
-          table-sm"
-          id="TempAllPatients">
-          <thead class="thead-light">
-          <tr>
-              <th scope="col"> First Name </th>
-              <th scope="col"> Last Name </th>
-              <th scope="col"> Patient ID </th>
-              <th scope="col"> DOB </th>
-              <th scope="col"> Sex </th>
-              <th scope="col"> Height </th>
-              <th scope="col"> Weight </th>
-          </tr>
+  <div>
+      <table class="table .table-striped">
+          <thead>
+              <tr>
+                  <th>Diagnose Patient</th>
+                  <th>Patient First Name</th>
+                  <th>Patient Last Name</th>
+                  <th>Date of Birth</th>
+                  <!-- <th>Age</th> -->
+                  <th>Allergies</th>
+                  <th>Height</th>
+                  <th>Weight</th>
+                  <th>Vaccinations</th>
+                  <th>Blood Type</th>
+                  <th>Sex</th>
+                  <!-- <th>Doctor</th> -->
+              </tr>
           </thead>
-  
           <tbody>
-  
-         VVV From Patient Model VVV
-      public patientId: number|null;
-      public firstName: string;
-      public lastName: string;
-      public dob: Date;
-      public height: number;
-      public weight: number;
-      public bloodType: string;
-      public sex: string;
-      public vaccinations?: object[];
-      public allergies?: object[];
-  
-              <tr *ngFor="let t of tempAllPatients">
-                  <td style="text-align : center;">{{t.patientId}}</td>
-                  <td style="text-align : center;">{{t.firstName}}</td>
-                  <td style="text-align : center;">{{t.lastName}}</td>
-                  <td style="text-align : center;">{{t.dob}}</td>
-                  VV Can Not Pull Out Without Sex Model Because Patient Currently STores As
-                          The String sex_id In DBeaver Database And Does Not Map To Their
-                          Patient
-                 <td style="text-align : center;">{{t.sex}}</td>
-                  <td style="text-align : center;">{{t.height}}</td>
-                  <td style="text-align : center;">{{t.weight}}</td>
+              <tr *ngFor="let patient of patientsArray">
+                <td><app-button (btnClick)="diagnosePatient(patient)"></app-button></td>
+                  <td>{{patient.firstName}}</td>
+                  <td>{{patient.lastName}}</td>
+                  <td>{{patient.dob}}</td>
+                  <!-- <td>{{patient.dob}}</td> -->
+                  <td>
+                      <ul>
+                          <li  *ngFor = "let allergy of patient.allergies">
+                              {{allergy.allergy}}
+                          </li>
+                      </ul>
+                  </td>
+                  <td>{{patient.height}}</td>
+                  <td>{{patient.weight}}</td>
+                  <td>
+                      <ul>
+                          <li  *ngFor = "let vax of patient.vaccinations">
+                              {{vax.vaccination}}
+                          </li>
+                      </ul>
+                      <!-- {{patient.vaccinations[0].vaccination}} -->
+                  </td>
+                  <td>{{patient.bloodType.type}}</td>
+                  <td>{{patient.sex.sex}}</td>
+                  <td>{{patient.doctor}}</td>
               </tr>
           </tbody>
       </table>
-  
-      </div> -->
-  <div class="row"></div>
-  
-      <div class="search-area">
-      <br class="form-group">
-          <div class="title">
-              <h3>Patient search</h3>
-          </div>
-          
-          <!-- <label for="patient-search">Search for Patients</label> -->
-          First name:
-          <input type="text" class="form-control Input" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
-          Last name:
-          <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>
-     
-  
-      <label for= "dob">Date of Birth:</label>
-      <input size=12
-          type= "date"
-          class= "form-control "
-          name= "dob"
-          id= "dob"
-          #dobField
-          placeholder="Date of birth (mm/dd/yyyy)"
-      > 
-  
-<div class="btnRow">
-           <button id="searchId" class="Button2" (btnClick)="getAllPatients()" text="Display All Patients">Display all patients</button>
-          <button id="searchName"  class="Button2" (btnClick)="searchPatByFName(firstName.value)" text="Search for Patients by First Name">Search for patients by first name</button>
-          <button id="searchFullName"  class="Button2" (btnClick)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name">Search for patients by first name and last name</button>
-          <button id="searchDOB" class="Button2" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth">Search for patients by first name, last name and date of birth</button>
-      </div>
   </div>
-<!-- <app-navbar></app-navbar>
-<div class="background">
-<div class="container">
-    <h1>Nurse</h1>
-</div>
-<app-button class="btn btn-top-left" (btnClick)="goBack()" text="Back"></app-button>
+ 
+  
+                           
 
-<div class="search-area">
-    <app-button class="btn" (btnClick)="routeToAdd()"text="Add Patient Options"></app-button>
-    <app-button class="btn" (btnClick)="getInfo()" text="View User Info"></app-button>
-    <app-button class="btn" (btnClick)="logout()"text="Logout"></app-button>
-</div>
-
-<div class="btn-center">
-    <app-button class="btn btn-add-patient" (btnClick)="addPatient()" text="Add a Patient"></app-button>
-</div>
-
-
-    <div class="search-area">
-        <div class="form-group"> -->
-            <!-- <label for="patient-search">Search for Patients</label> -->
-            <!-- <input type="text" class="form-control" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
-            <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>
+                         
+                            
+                        
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <label for= "dob">Date of Birth:</label>
-        <input
-            type= "date"
-            class= "form-control"
-            name= "dob"
-            id= "dob"
-            #dobField
-        >
-
-        <div class="button-group">
-            <app-button id="searchId" class="btn btn-search" (btnClick)="getAllPatients()" text="Display All Patients"></app-button>
-            <app-button id="searchName"  class="btn btn-search" (btnClick)="searchPatByFName(firstName.value)" text="Search for Patients by First Name"></app-button>
-            <app-button id="searchFullName"  class="btn btn-search" (btnClick)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name"></app-button>
-            <app-button id="searchDOB" class="btn btn-search" (btnClick)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth"></app-button>
-        </div>
-    </div> -->
-
-<div class="table">
-    <table>
-        <thead>
-            <tr>
-                <th>Diagnose Patient</th>
-                <th>Patient First Name</th>
-                <th>Patient Last Name</th>
-                <th>Date of Birth</th>
-                <!-- <th>Age</th> -->
-                <th>Allergies</th>
-                <th>Height</th>
-                <th>Weight</th>
-                <th>Vaccinations</th>
-                <th>Blood Type</th>
-                <th>Sex</th>
-                <!-- <th>Doctor</th> -->
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let patient of patientsArray">
-              <td><app-button (btnClick)="diagnosePatient(patient)"></app-button></td>
-                <td>{{patient.firstName}}</td>
-                <td>{{patient.lastName}}</td>
-                <td>{{patient.dob}}</td>
-                <!-- <td>{{patient.dob}}</td> -->
-                <td>
-                    <ul>
-                        <li  *ngFor = "let allergy of patient.allergies">
-                            {{allergy.allergy}}
-                        </li>
-                    </ul>
-                </td>
-                <td>{{patient.height}}</td>
-                <td>{{patient.weight}}</td>
-                <td>
-                    <ul>
-                        <li  *ngFor = "let vax of patient.vaccinations">
-                            {{vax.vaccination}}
-                        </li>
-                    </ul>
-                    <!-- {{patient.vaccinations[0].vaccination}} -->
-                </td>
-                <td>{{patient.bloodType.type}}</td>
-                <td>{{patient.sex.sex}}</td>
-                <td>{{patient.doctor}}</td>
-            </tr>
-        </tbody>
-    </table>
+    </div>
 </div>
-</div><button class="Button3 col-sm-2" type="button" (click) = "logout()" >Logout will go away once navbar is made</button>
