--- a/src/app/components/diagnosis/diagnosis.component.css
+++ b/src/app/components/diagnosis/diagnosis.component.css
@@ -33,3 +33,8 @@
 ul {
   margin-bottom: 4px;
 }
+.mainbox{
+  width: 95%;
+  border-radius: 0;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
