--- a/src/app/components/diagnosis/diagnosis.component.html
+++ b/src/app/components/diagnosis/diagnosis.component.html
@@ -1,6 +1,17 @@
-<app-navbar></app-navbar>
-<br />
-<div class="background">
+<div class="container-full">
+  <div class="container-fluid h100">
+      <div class="row h100">
+          <div class="col-md-2 p-3 bg-light sidebar">
+              <app-side-bar class="d-flex flex-column flex-shrink-0 h100"></app-side-bar>
+          </div>
+          <div class="col-md-10 align-self-center">
+              <div class="mainbox">
+                  <div class="row">
+                      <div class="col-md-12 p-5">
+                          <div class="mb-5">
+                              <img src="/assets/img/WellNetLogo.jpg" alt="">
+                          </div>
+                          <h4 class="mb-4">Patient Diagnosis</h4>
   <div>
     <table class="diagnosisTable">
       <thead>
@@ -105,7 +116,7 @@
         <button
           *ngSwitchCase="'nurse'"
           type="submit"
-          class="btn Button2"
+          class="btn btn-outline-success"
           [disabled]="!formDemo.valid"
         >
           Submit Diagnosis
@@ -113,7 +124,7 @@
         <button
           *ngSwitchCase="'doctor'"
           type="submit"
-          class="btn Button2"
+          class="btn btn-outline-success"
           [disabled]="!formDemo.valid"
         >
           Submit Treatment
@@ -121,4 +132,10 @@
       </div>
     </form>
   </div>
+</div>                
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
