--- a/src/app/components/nurse/nurse.component.css
+++ b/src/app/components/nurse/nurse.component.css
@@ -87,5 +87,7 @@ table th:last-child {
 }
 */
 .mainbox{
-    width: 80%;
+    width: 95%;
+    border-radius: 0;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
