--- a/src/app/components/patient-check-in/patient-check-in.component.css
+++ b/src/app/components/patient-check-in/patient-check-in.component.css
@@ -1,9 +1,11 @@
 .asterix{
     color:red;
 }
-.mainbox{
-    border-radius: 0;
-}
 .container-full{
     height: auto;
+}
+.mainbox{
+    width: 95%;
+    border-radius: 0;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
