--- a/src/app/components/rooms/rooms.component.css
+++ b/src/app/components/rooms/rooms.component.css
@@ -1,3 +1,11 @@
+.mainbox{
+  width: 95%;
+  border-radius: 0;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+.container-full{
+  height: auto;
+}
 .other{
   background-color:#ebecf0; /**/
 }
@@ -16,7 +24,7 @@
   border-top: solid 1px rgba(0,0,0,.125);
 }
 .hall{
-    height: 70px;
+    height: 30px;
 }
 .smallroom{
     height: 80px;
