--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -11,37 +11,37 @@
 Home
 </a>
 </li>
-<li>
+<li class="nav-item">
 <a [routerLink]="['/profile']" class="nav-link link-dark">
 <i class="bi bi-person"></i>
 Profile
 </a>
 </li>
-<li>
+<li class="nav-item">
   <a [routerLink]="['/patientcheckin']" class="nav-link link-dark">
     <i class="bi bi-person-plus"></i>
   Add patient
   </a>
   </li>
-  <li>
+  <li class="nav-item">
     <a [routerLink]="['/addAllergiesVaccines']" class="nav-link link-dark">
       <i class="bi bi-clipboard-plus"></i>
     Add patient options
     </a>
     </li>
-    <li>
+    <li class="nav-item">
       <a [routerLink]="['/rooms']" class="nav-link link-dark">
         <i class="bi bi-door-open"></i>
       Assign patient to room
       </a>
       </li>
-<li>
+<li class="nav-item">
 <a href="#" class="nav-link link-dark">
 <i class="bi bi-shield-lock"></i>
 Change password
 </a>
 </li>
-<li>
+<li class="nav-item">
 <a class="nav-link link-dark" (click)="logout()">
 <i class="bi bi-box-arrow-in-left"></i>
 Logout 
